--- a/notebooks/subgraph_link_metrics.ipynb
+++ b/notebooks/subgraph_link_metrics.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3d7ea37a",
    "metadata": {},
    "outputs": [],
@@ -25,15 +25,30 @@
     "\n",
     "import networkx as nx\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "from tqdm.auto import tqdm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4fb4927a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 6 subgraph(s):\n",
+      " - data/subgraphs/drug-disease\n",
+      " - data/subgraphs/drug-disease-gene\n",
+      " - data/subgraphs/drug-disease-gene_protein\n",
+      " - data/subgraphs/drug-disease-gene_protein-pathway\n",
+      " - data/subgraphs/drug-disease-gene_protein-pathway-molecular_function\n",
+      " - data/subgraphs/drug-disease-pathway\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Resolve project paths so the notebook works when launched from the repo root or the notebooks folder.\n",
@@ -53,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1a949fcf",
    "metadata": {},
    "outputs": [],
@@ -69,13 +84,30 @@
     "    return nodes, edges\n",
     "\n",
     "\n",
-    "def build_graph(nodes: pd.DataFrame, edges: pd.DataFrame) -> nx.Graph:\n",
+    "def build_graph(\n",
+    "    nodes: pd.DataFrame,\n",
+    "    edges: pd.DataFrame,\n",
+    "    *,\n",
+    "    label: str | None = None,\n",
+    ") -> nx.Graph:\n",
     "    \"\"\"Construct an undirected graph from node and edge tables.\"\"\"\n",
     "    graph = nx.Graph()\n",
-    "    for row in nodes.itertuples(index=False):\n",
+    "    node_desc = f\"{label}: nodes\" if label else \"Nodes\"\n",
+    "    for row in tqdm(\n",
+    "        nodes.itertuples(index=False),\n",
+    "        total=len(nodes),\n",
+    "        desc=node_desc,\n",
+    "        leave=False,\n",
+    "    ):\n",
     "        graph.add_node(row.node_index, node_type=row.node_type, node_name=row.node_name)\n",
     "\n",
-    "    for row in edges.itertuples(index=False):\n",
+    "    edge_desc = f\"{label}: edges\" if label else \"Edges\"\n",
+    "    for row in tqdm(\n",
+    "        edges.itertuples(index=False),\n",
+    "        total=len(edges),\n",
+    "        desc=edge_desc,\n",
+    "        leave=False,\n",
+    "    ):\n",
     "        graph.add_edge(row.x_index, row.y_index, relation=row.relation)\n",
     "    return graph\n",
     "\n",
@@ -87,12 +119,18 @@
     "    *,\n",
     "    proximity_samples: int = 200,\n",
     "    seed: int = 42,\n",
+    "    label: str | None = None,\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Compute link prediction heuristics for every observed edge.\"\"\"\n",
+    "    prefix = f\"{label}: \" if label else \"\"\n",
+    "\n",
     "    type_map = nodes.set_index('node_index')['node_type'].to_dict()\n",
     "    name_map = nodes.set_index('node_index')['node_name'].to_dict()\n",
     "    degree_map = dict(graph.degree())\n",
     "    nodes_by_type = nodes.groupby('node_type')['node_index'].apply(list).to_dict()\n",
+    "\n",
+    "    edge_rows = list(edges.itertuples(index=False))\n",
+    "    edge_pairs = [(row.x_index, row.y_index) for row in edge_rows]\n",
     "\n",
     "    rng = random.Random(seed)\n",
     "    shortest_path_cache: dict[str, dict[str, int]] = {}\n",
@@ -121,21 +159,32 @@
     "        max_attempts = proximity_samples * 10\n",
     "        attempts = 0\n",
     "\n",
-    "        while len(samples) < proximity_samples and attempts < max_attempts:\n",
-    "            attempts += 1\n",
-    "            u = rng.choice(candidates_u)\n",
-    "            v = rng.choice(candidates_v)\n",
-    "            if u == v:\n",
-    "                continue\n",
-    "            pair_key = (u, v) if type_u != type_v else tuple(sorted((u, v)))\n",
-    "            if pair_key in seen_pairs:\n",
-    "                continue\n",
-    "            seen_pairs.add(pair_key)\n",
+    "        progress = None\n",
+    "        if proximity_samples > 0:\n",
+    "            desc = f\"{prefix}Baseline {type_u}->{type_v}\"\n",
+    "            progress = tqdm(total=proximity_samples, desc=desc, leave=False)\n",
     "\n",
-    "            dist = shortest_path_length(u, v)\n",
-    "            if math.isinf(dist):\n",
-    "                continue\n",
-    "            samples.append(dist)\n",
+    "        try:\n",
+    "            while len(samples) < proximity_samples and attempts < max_attempts:\n",
+    "                attempts += 1\n",
+    "                u = rng.choice(candidates_u)\n",
+    "                v = rng.choice(candidates_v)\n",
+    "                if u == v:\n",
+    "                    continue\n",
+    "                pair_key = (u, v) if type_u != type_v else tuple(sorted((u, v)))\n",
+    "                if pair_key in seen_pairs:\n",
+    "                    continue\n",
+    "                seen_pairs.add(pair_key)\n",
+    "\n",
+    "                dist = shortest_path_length(u, v)\n",
+    "                if math.isinf(dist):\n",
+    "                    continue\n",
+    "                samples.append(dist)\n",
+    "                if progress is not None:\n",
+    "                    progress.update(1)\n",
+    "        finally:\n",
+    "            if progress is not None:\n",
+    "                progress.close()\n",
     "\n",
     "        if len(samples) < 2:\n",
     "            baseline_cache[key] = None\n",
@@ -148,20 +197,29 @@
     "        baseline_cache[(type_v, type_u)] = (mean_dist, std_dist)\n",
     "        return baseline_cache[key]\n",
     "\n",
-    "    edge_pairs = [(row.x_index, row.y_index) for row in edges.itertuples(index=False)]\n",
-    "\n",
     "    jaccard_scores = {}\n",
-    "    for u, v, score in nx.jaccard_coefficient(graph, edge_pairs):\n",
+    "    for u, v, score in tqdm(\n",
+    "        nx.jaccard_coefficient(graph, edge_pairs),\n",
+    "        total=len(edge_pairs),\n",
+    "        desc=f\"{prefix}Jaccard\",\n",
+    "        leave=False,\n",
+    "    ):\n",
     "        jaccard_scores[(u, v)] = score\n",
     "        jaccard_scores[(v, u)] = score\n",
     "\n",
     "    adamic_scores = {}\n",
-    "    for u, v, score in nx.adamic_adar_index(graph, edge_pairs):\n",
+    "    for u, v, score in tqdm(\n",
+    "        nx.adamic_adar_index(graph, edge_pairs),\n",
+    "        total=len(edge_pairs),\n",
+    "        desc=f\"{prefix}Adamic-Adar\",\n",
+    "        leave=False,\n",
+    "    ):\n",
     "        adamic_scores[(u, v)] = score\n",
     "        adamic_scores[(v, u)] = score\n",
     "\n",
     "    records = []\n",
-    "    for row in edges.itertuples(index=False):\n",
+    "    edge_desc = f\"{prefix}Scoring edges\"\n",
+    "    for row in tqdm(edge_rows, total=len(edge_rows), desc=edge_desc, leave=False):\n",
     "        u = row.x_index\n",
     "        v = row.y_index\n",
     "        source_type = type_map.get(u)\n",
@@ -223,22 +281,79 @@
    "execution_count": null,
    "id": "d6975d8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6384bb661c0446babb4e7b4254a5632",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Subgraphs:   0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "381eabc125494dfc8e7db9dffa95ca34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "drug-disease: nodes:   0%|          | 0/25037 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "47a6f0077b684e2dbbd7cfac3ad93372",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "drug-disease: edges:   0%|          | 0/2822278 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29e82d3528b64764887e8edc4de0cb29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "drug-disease: Jaccard:   0%|          | 0/2822278 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "results = {}\n",
-    "for subgraph_path in subgraph_dirs:\n",
+    "for subgraph_path in tqdm(subgraph_dirs, desc='Subgraphs', leave=False):\n",
+    "    label = subgraph_path.name\n",
     "    nodes_df, edges_df = load_subgraph(subgraph_path)\n",
-    "    graph = build_graph(nodes_df, edges_df)\n",
-    "    metrics_df = compute_link_metrics(graph, nodes_df, edges_df)\n",
-    "    key = subgraph_path.name\n",
-    "    results[key] = {\n",
+    "    graph = build_graph(nodes_df, edges_df, label=label)\n",
+    "    metrics_df = compute_link_metrics(graph, nodes_df, edges_df, label=label)\n",
+    "    results[label] = {\n",
     "        'graph': graph,\n",
     "        'nodes': nodes_df,\n",
     "        'edges': edges_df,\n",
     "        'metrics': metrics_df,\n",
     "    }\n",
-    "    print(f\"Computed metrics for {key}: {len(metrics_df)} edge(s)\")\n"
+    "    tqdm.write(f\"Computed metrics for {label}: {len(metrics_df)} edge(s)\")\n"
    ]
   },
   {
@@ -271,7 +386,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "prime-kg-venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
